--- a/views/admin-movies-add.ejs
+++ b/views/admin-movies-add.ejs
@@ -2,8 +2,8 @@
 <html>
 
 <head>
-  <title>Create Movie</title>
   <meta charset="UTF-8">
+  <title>Admin | Movies Add</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="/styles/fe_style.css">
@@ -19,7 +19,7 @@
     <div>
       <h1 class="mb-3 text-3xl font-semibold">Create Movie</h1>
       <form action="/create-movie" method="POST" enctype="multipart/form-data"
-        class="w-full max-w-lg p-8 rounded-md custom-btn">
+        class="w-full max-w-lg p-8 rounded-md gold-btn">
         <div class="flex flex-wrap mb-3 -mx-3">
           <div class="w-full px-3 mb-3">
             <label class="block mb-2 text-xs font-bold tracking-wide text-black uppercase" for="name">Title</label>
