--- a/views/admin-schedules-edit.ejs
+++ b/views/admin-schedules-edit.ejs
@@ -2,111 +2,93 @@
 <html>
 
 <head>
-  <title>Add New Seats </title>
+  <title>Admin | Schedule Edit </title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="/styles/fe_style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
-<body>
-  <h1>Add New Schedule</h1>
-  <form action="/edit-schedule/<%=schedule.schedule_id%>" method="POST">
-    <label for="movie">movie:</label>
-    <select id="movie" name="movie">
-      <option value="" disabled selected>Select movie</option>
-      <% movies.forEach((movie)=> { %>
-        <option value="<%=movie.movie_id%>">
-          <%=movie.title%>
-        </option>
-        <% })%>
-    </select>
-
-    <label for="city">City:</label>
-    <select id="city" name="city">
-      <option value="" disabled selected>Select city</option>
-      <% cities.forEach((city)=> { %>
-        <option value="<%=city.city%>">
-          <%=city.city%>
-        </option>
-        <% })%>
-    </select>
-
-    <label for="theater">Theater:</label>
-    <select id="theater" name="theater" onchange="updateStudioOptions()">
-    </select>
-
-    <label for="studio">studio:</label>
-    <select id="studio" name="studio">
-    </select>
-    <input type="date" name="date" min="<%= minDate %>" />
-
-    <label for="hours">Time:</label>
-    <input type="text" id="hours" name="hours">
-
-    <label for="prices">Price:</label>
-    <input type="text" id="prices" name="prices">
-
-
-    <input type="submit" value="Book Now">
-  </form>
-
-  <script>
-    function updateStudioOptions() {
-      var theaterSelect = document.getElementById('theater');
-      var studioSelect = document.getElementById('studio');
-      var selectedTheater = parseInt(theaterSelect.value);
-      console.log(selectedTheater);
-      var studioOptions = <% - JSON.stringify(studios) %>;
-
-      while (studioSelect.options.length > 0) {
-        studioSelect.options[0].remove();
-      }
-      var newOption = document.createElement('option');
-      newOption.value = "None";
-      newOption.innerHTML = "None";
-      newOption.disabled = true;
-      newOption.selected = true;
-      studioSelect.appendChild(newOption);
-
-      studioOptions.forEach(function (studio) {
-        if (studio.theater_id === selectedTheater) {
-          console.log("tes");
-          var newOption = document.createElement('option');
-          newOption.value = studio.studio_id;
-          newOption.innerHTML = studio.name;
-          studioSelect.appendChild(newOption);
-        }
-      });
-
-    }
-
-    function updateTheaterOptions() {
-      var citySelect = document.getElementById('city');
-      var theaterSelect = document.getElementById('theater');
-      var selectedCity = citySelect.value;
-      console.log(selectedCity);
-      var theaterOptions = <% - JSON.stringify(theaters) %>;
-
-      while (theaterSelect.options.length > 0) {
-        theaterSelect.options[0].remove();
-      }
-      var newOption = document.createElement('option');
-      newOption.value = "None";
-      newOption.innerHTML = "None";
-      newOption.disabled = true;
-      newOption.selected = true;
-      theaterSelect.appendChild(newOption);
-
-      theaterOptions.forEach(function (theater) {
-        if (theater.city === selectedCity) {
-          var newOption = document.createElement('option');
-          newOption.value = theater.theater_id;
-          newOption.innerHTML = theater.name;
-          theaterSelect.appendChild(newOption);
-        }
-      });
-
-    }
-    // Attach the event listener after defining the function
-    document.getElementById('city').addEventListener('change', updateTheaterOptions);
-  </script>
+<body class="bg-black font-raleway text-cfab7a">
+  <div class="absolute top-0 right-0 m-4">
+    <a href="/" class="text-4xl font-semibold hover:text-white">TixOnline</a>
+  </div>
+  <div class="flex flex-col items-center justify-start h-screen pt-20">
+    <div>
+      <h1 class="mb-3 text-3xl font-semibold">Edit Schedule</h1>
+      <form action="/edit-schedule/<%= schedule.schedule_id %>" method="POST"
+        class="w-full max-w-lg p-8 rounded-md gold-btn">
+        <div class="flex flex-wrap mb-3 -mx-3">
+          <div class="w-full px-3 mb-3">
+            <label class="block mb-2 text-xs font-bold tracking-wide text-black uppercase" for="movie">Movie</label>
+            <select
+              class="block w-full px-4 py-3 mb-3 leading-tight text-gray-700 bg-gray-200 border border-gray-200 rounded appearance-none focus:outline-none focus:bg-white"
+              id="movie" name="movie">
+              <option value="" disabled selected>Select movie</option>
+              <% movies.forEach((movie)=> { %>
+                <option value="<%= movie.movie_id %>">
+                  <%= movie.title %>
+                </option>
+                <% }) %>
+            </select>
+          </div>
+          <div class="w-full px-3 mb-3">
+            <label class="block mb-2 text-xs font-bold tracking-wide text-black uppercase" for="city">City</label>
+            <select
+              class="block w-full px-4 py-3 mb-3 leading-tight text-gray-700 bg-gray-200 border border-gray-200 rounded appearance-none focus:outline-none focus:bg-white"
+              id="city" name="city">
+              <option value="" disabled selected>Select city</option>
+              <% cities.forEach((city)=> { %>
+                <option value="<%= city.city %>">
+                  <%= city.city %>
+                </option>
+                <% }) %>
+            </select>
+          </div>
+          <div class="w-full px-3 mb-3">
+            <label class="block mb-2 text-xs font-bold tracking-wide text-black uppercase" for="theater">Theater</label>
+            <select
+              class="block w-full px-4 py-3 mb-3 leading-tight text-gray-700 bg-gray-200 border border-gray-200 rounded appearance-none focus:outline-none focus:bg-white"
+              id="theater" name="theater" onchange="updateStudioOptions()">
+            </select>
+          </div>
+          <div class="w-full px-3 mb-3">
+            <label class="block mb-2 text-xs font-bold tracking-wide text-black uppercase" for="studio">Studio</label>
+            <select
+              class="block w-full px-4 py-3 mb-3 leading-tight text-gray-700 bg-gray-200 border border-gray-200 rounded appearance-none focus:outline-none focus:bg-white"
+              id="studio" name="studio">
+            </select>
+          </div>
+          <div class="w-full px-3 mb-3">
+            <label class="block mb-2 text-xs font-bold tracking-wide text-black uppercase" for="date">Date</label>
+            <input
+              class="block w-full px-4 py-3 mb-3 leading-tight text-gray-700 bg-gray-200 border border-gray-200 rounded appearance-none focus:outline-none focus:bg-white"
+              type="date" id="date" name="date" min="<%= minDate %>">
+          </div>
+          <div class="w-full px-3 mb-3">
+            <label class="block mb-2 text-xs font-bold tracking-wide text-black uppercase" for="hours">Time</label>
+            <input
+              class="block w-full px-4 py-3 mb-3 leading-tight text-gray-700 bg-gray-200 border border-gray-200 rounded appearance-none focus:outline-none focus:bg-white"
+              type="text" id="hours" name="hours">
+          </div>
+          <div class="w-full px-3 mb-3">
+            <label class="block mb-2 text-xs font-bold tracking-wide text-black uppercase" for="prices">Price</label>
+            <input
+              class="block w-full px-4 py-3 mb-3 leading-tight text-gray-700 bg-gray-200 border border-gray-200 rounded appearance-none focus:outline-none focus:bg-white"
+              type="text" id="prices" name="prices">
+          </div>
+          <div class="w-full px-3 py-4 text-right">
+            <input
+              class="px-4 py-2 font-bold text-black text-white bg-red-600 rounded cursor-pointer hover:bg-red-800 focus:outline-none focus:shadow-outline"
+              type="submit" value="Book Now">
+          </div>
+        </div>
+      </form>
+    </div>
+  </div>
 </body>
+
 
 </html>
