--- a/views/admin-schedules.ejs
+++ b/views/admin-schedules.ejs
@@ -2,9 +2,8 @@
 <html>
 
 <head>
-  <title>
-    <title>Admin | Schedules</title>
-  </title>
+  <meta charset="UTF-8">
+  <title>Admin | Schedules</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="/styles/fe_style.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
