--- a/views/admin-seats-edit.ejs
+++ b/views/admin-seats-edit.ejs
@@ -2,36 +2,61 @@
 <html>
 
 <head>
-  <title>Add New Seats </title>
+  <meta charset="UTF-8">
+  <title>Admin | Seats Edit </title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="/styles/fe_style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
-<body>
-  <h1>Add New Seats</h1>
-  <form action="/edit-seat/<%=seat.seat_id%>" method="POST">
-    <label for="seatNumber">Seat Number:</label>
-    <input type="text" id="seatNumber" name="seatNumber">
-
-    <label for="city">City:</label>
-    <select id="city" name="city">
-      <option value="" disabled selected>Select city</option>
-      <% cities.forEach((city)=> { %>
-        <option value="<%=city.city%>">
-          <%=city.city%>
-        </option>
-        <% })%>
-    </select>
-
-    <label for="theater">Theater:</label>
-    <select id="theater" name="theater" onchange="updateStudioOptions()">
-    </select>
-
-    <label for="studio">studio:</label>
-    <select id="studio" name="studio">
-    </select>
-
-    <input type="submit" value="Book Now">
-  </form>
-
+<body class="bg-black font-raleway text-cfab7a">
+  <div class="absolute top-0 right-0 m-4">
+    <a href="/" class="text-4xl font-semibold hover:text-white">TixOnline</a>
+  </div>
+  <div class="flex flex-col items-center justify-start h-screen pt-20">
+    <div>
+      <h1 class="mb-3 text-3xl font-semibold">Edit Seats</h1>
+      <form action="/edit-seat/<%=seat.seat_id%>" method="POST" class="w-full max-w-lg p-8 rounded-md gold-btn">
+        <div class="flex flex-wrap mb-3 -mx-3">
+          <div class="w-full px-3 mb-3">
+            <label class="block mb-2 text-xs font-bold tracking-wide text-black uppercase" for="seatNumber">Seat
+              Number</label>
+            <input type="text" id="seatNumber" name="seatNumber"
+              class="block w-full px-4 py-3 mb-3 leading-tight text-gray-700 bg-gray-200 border border-gray-200 rounded appearance-none focus:outline-none focus:bg-white">
+          </div>
+          <div class="w-full px-3 mb-3">
+            <label class="block mb-2 text-xs font-bold tracking-wide text-black uppercase" for="city">City</label>
+            <select id="city" name="city"
+              class="block w-full px-4 py-3 mb-3 leading-tight text-gray-700 bg-gray-200 border border-gray-200 rounded appearance-none focus:outline-none focus:bg-white">
+              <option value="" disabled selected>Select city</option>
+              <% cities.forEach((city)=> { %>
+                <option value="<%= city.city %>">
+                  <%= city.city %>
+                </option>
+                <% }) %>
+            </select>
+          </div>
+          <div class="w-full px-3 mb-3">
+            <label class="block mb-2 text-xs font-bold tracking-wide text-black uppercase" for="theater">Theater</label>
+            <select id="theater" name="theater" onchange="updateStudioOptions()"
+              class="block w-full px-4 py-3 mb-3 leading-tight text-gray-700 bg-gray-200 border border-gray-200 rounded appearance-none focus:outline-none focus:bg-white">
+            </select>
+          </div>
+          <div class="w-full px-3 mb-3">
+            <label class="block mb-2 text-xs font-bold tracking-wide text-black uppercase" for="studio">Studio</label>
+            <select id="studio" name="studio"
+              class="block w-full px-4 py-3 mb-3 leading-tight text-gray-700 bg-gray-200 border border-gray-200 rounded appearance-none focus:outline-none focus:bg-white">
+            </select>
+          </div>
+          <div class="w-full px-3 py-4 text-right">
+            <input type="submit" value="Book Now"
+              class="px-4 py-2 font-bold text-black text-white bg-red-600 rounded cursor-pointer hover:bg-red-800 focus:outline-none focus:shadow-outline">
+          </div>
+        </div>
+      </form>
+    </div>
+  </div>
   <script>
     function updateStudioOptions() {
       var theaterSelect = document.getElementById('theater');
@@ -59,7 +84,6 @@
           studioSelect.appendChild(newOption);
         }
       });
-
     }
 
     function updateTheaterOptions() {
@@ -87,8 +111,8 @@
           theaterSelect.appendChild(newOption);
         }
       });
-
     }
+
     // Attach the event listener after defining the function
     document.getElementById('city').addEventListener('change', updateTheaterOptions);
   </script>
