--- a/views/admin-studios-add.ejs
+++ b/views/admin-studios-add.ejs
@@ -2,49 +2,89 @@
 <html>
 
 <head>
+  <meta charset="UTF-8">
   <title>Movie Ticket Booking</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="/styles/fe_style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
-<body>
-  <h1>Movie Ticket Booking</h1>
-  <form action="/create-studio" method="POST">
-    <label for="name">Name:</label>
-    <input type="text" id="name" name="name" required>
-
-    <label for="type">Ticket Type:</label>
-    <select id="type" name="type" required>
-      <option value="" disabled selected>Select type</option>
-      <option value="Deluxe">Deluxe</option>
-      <option value="Reguler">Reguler</option>
-    </select>
-
-    <label for="city">City:</label>
-    <select id="city" name="city" required>
-      <option value="" disabled selected>Select city</option>
-      <% cities.forEach((city)=> { %>
-        <option value="<%=city.city%>">
-          <%=city.city%>
-        </option>
-        <% })%>
-    </select>
-
-    <label for="theater">Theater:</label>
-    <select id="theater" name="theater" required>
-    </select>
-
-    <input type="submit" value="Book Now">
-  </form>
-
+<body class="bg-black font-raleway text-cfab7a">
+  <div class="absolute top-0 right-0 m-4">
+    <a href="/" class="text-4xl font-semibold hover:text-white">TixOnline</a>
+  </div>
+  <div class="flex flex-col items-center justify-start h-screen pt-20">
+    <div>
+      <h1 class="mb-3 text-3xl font-semibold">Movie Ticket Booking</h1>
+      <form action="/create-studio" method="POST" class="w-full max-w-lg p-8 rounded-md gold-btn">
+        <div class="flex flex-wrap mb-3 -mx-3">
+          <div class="w-full px-3 mb-3">
+            <label class="block mb-2 text-xs font-bold tracking-wide text-black uppercase" for="name">Name</label>
+            <input
+              class="block w-full px-4 py-3 mb-3 leading-tight text-gray-700 bg-gray-200 border border-gray-200 rounded appearance-none focus:outline-none focus:bg-white"
+              type="text" id="name" name="name" required>
+          </div>
+          <div class="w-full px-3 mb-3">
+            <label class="block mb-2 text-xs font-bold tracking-wide text-black uppercase" for="type">Ticket
+              Type</label>
+            <div class="relative">
+              <select
+                class="block w-full px-4 py-3 mb-3 leading-tight text-gray-700 bg-gray-200 border border-gray-200 rounded appearance-none focus:outline-none focus:bg-white"
+                id="type" name="type" required>
+                <option value="" disabled selected>Select type</option>
+                <option value="Deluxe">Deluxe</option>
+                <option value="Regular">Regular</option>
+              </select>
+              <div class="absolute inset-y-0 right-0 flex items-center px-2 pointer-events-none">
+                <svg class="w-4 h-4 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+                  <path d="M10 12l-6-6 1.414-1.414L10 9.172l4.586-4.586L16 6z" />
+                </svg>
+              </div>
+            </div>
+          </div>
+          <div class="w-full px-3 mb-3">
+            <label class="block mb-2 text-xs font-bold tracking-wide text-black uppercase" for="city">City</label>
+            <div class="relative">
+              <select
+                class="block w-full px-4 py-3 mb-3 leading-tight text-gray-700 bg-gray-200 border border-gray-200 rounded appearance-none focus:outline-none focus:bg-white"
+                id="city" name="city" required>
+                <option value="" disabled selected>Select city</option>
+                <% cities.forEach((city)=> { %>
+                  <option value="<%= city.city %>">
+                    <%= city.city %>
+                  </option>
+                  <% }) %>
+              </select>
+              <div class="absolute inset-y-0 right-0 flex items-center px-2 pointer-events-none">
+                <svg class="w-4 h-4 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+                  <path d="M10 12l-6-6 1.414-1.414L10 9.172l4.586-4.586L16 6z" />
+                </svg>
+              </div>
+            </div>
+          </div>
+          <div class="w-full px-3 mb-3">
+            <label class="block mb-2 text-xs font-bold tracking-wide text-black uppercase" for="theater">Theater</label>
+            <select
+              class="block w-full px-4 py-3 mb-3 leading-tight text-gray-700 bg-gray-200 border border-gray-200 rounded appearance-none focus:outline-none focus:bg-white"
+              id="theater" name="theater" required>
+            </select>
+          </div>
+          <div class="w-full px-3 py-4 text-right">
+            <input
+              class="px-4 py-2 font-bold text-black text-white bg-red-600 rounded cursor-pointer hover:bg-red-800 focus:outline-none focus:shadow-outline"
+              type="submit" value="Book Now">
+          </div>
+        </div>
+      </form>
+    </div>
+  </div>
   <script>
-
-
     function updateTheaterOptions() {
       var citySelect = document.getElementById('city');
       var theaterSelect = document.getElementById('theater');
       var selectedCity = citySelect.value;
-
       var theaterOptions = <% - JSON.stringify(theaters) %>;
-
 
       while (theaterSelect.options.length > 0) {
         theaterSelect.options[0].remove();
@@ -65,9 +105,11 @@
         }
       });
     }
+
     // Attach the event listener after defining the function
     document.getElementById('city').addEventListener('change', updateTheaterOptions);
   </script>
 </body>
+
 
 </html>
